--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.59.4",
     "@reduxjs/toolkit": "^2.11.2",
     "@remixicon/react": "^4.8.0",
     "@tailwindcss/vite": "^4.1.18",
